--- a/sample-project/index.html
+++ b/sample-project/index.html
@@ -44,7 +44,7 @@
                         </div>
                         <div class="step">
                             <div class="step-icon">
-                                <img src="img/lightbulbWhite.svg">
+                                <img src="img/lightbulbWhite.svg this is a test">
                             </div>
                             <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862126">Learn more about all you can do with Azure projects by visiting the documentation</a></div>
                         </div>
@@ -55,4 +55,5 @@
     </div>
 </body>
 
+<body>
 </html>
