new changes added to second branch custchanges2

--- a/sample-project/index.html
+++ b/sample-project/index.html
@@ -46,7 +46,7 @@
                             <div class="step-icon">
                                 <img src="img/lightbulbWhite.svg this is my second test">
                             </div>
-                            <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862126">Tracking custchanges1 for this branch Learn more about all you can do with Azure projects by visiting the documentation</a></div>
+                            <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862126">Tracking custchanges2 for this second branch Learn more about all you can do with Azure projects by visiting the documentation</a></div>
                         </div>
                     </div>
                 </div>
